--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script language='javascript' type='text/javascript'>
-	window.location.href='https://github.com/Chowe911'
+	window.location.href='https://github.com/fixed-link'
 </script>
